--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,9 @@ security:
                 path: app_logout
 
     role_hierarchy:
-        ROLE_COMPTABLE: ROLE_USER
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+        ROLE_COMPTABLE: [ ROLE_COMPTABLE ]
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -36,6 +38,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: '^/admin/users', roles: ROLE_SUPER_ADMIN }
+        - { path: '^/comptable', roles: ROLE_COMPTABLE }
+        - { path: '^/admin', roles: ROLE_ADMIN }
         # - { path: ^/comptable, roles: ROLE_COMPTABLE }
         # - { path: ^/profile, roles: ROLE_USER }
 
